# snake

./: .gitignore  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/kotlin/me/app/cherry/: MainActivity.kt
app/src/main/native/: CMakeLists.txt  main.cpp
app/src/main/native/app/: app.h
app/src/main/native/app/game/: snake.c  snake.h
app/src/main/native/example/: example_draw.c  example_draw.h
app/src/main/native/renderer/: draw.c  draw.h  renderer.c  renderer.h
app/src/main/native/utils/: utils.h
app/src/main/res/drawable/: main_ic.xml
open_gl_examples/: example_renderer.c  example_renderer.h
